--- a/packages/themes/dependencies/flexlayout-react.scss
+++ b/packages/themes/dependencies/flexlayout-react.scss
@@ -231,6 +231,10 @@
   top:0;
   bottom:0;
   right:0;
+
+  button {
+    filter: brightness(200%); 
+  }
 }
 
 .flexlayout__tab_toolbar_button-min {
@@ -239,8 +243,8 @@
   border:none;
   outline-width: 0;
   background: transparent url("./images/maximize.png") no-repeat center;
-
 }
+
 .flexlayout__tab_toolbar_button-max {
   width:20px;
   height:20px;
