--- a/packages/components/src/local/asset-icon/styles.module.scss
+++ b/packages/components/src/local/asset-icon/styles.module.scss
@@ -87,3 +87,21 @@ $platforms: agi, auxiliary, boghammer, carrier, coastal-radar-site, datum,
     background-image: url("./counters/#{$platform}.svg");
   }
 }
+
+.img {
+  width: 100%;
+  height: 100%;
+}
+
+.asset-icon-with-image {
+  div {
+    border-radius: 999px;
+    padding: 2px;
+    box-sizing: border-box;
+  }
+
+  img {
+    width: 100%;
+    display: block;
+  }
+}
