--- a/packages/components/src/local/asset-icon/styles.module.scss
+++ b/packages/components/src/local/asset-icon/styles.module.scss
@@ -98,6 +98,8 @@ $platforms: agi, auxiliary, boghammer, carrier, coastal-radar-site, datum,
 .asset-icon-with-image {
   padding: 10%;
   box-sizing: border-box;
+  width: 100%;
+  height: 100%;
 
   img {
     width: 100%;
