Revert btn styling change

--- a/packages/themes/_btns.scss
+++ b/packages/themes/_btns.scss
@@ -34,9 +34,7 @@
 }
 
 .btn-secondary {
-  background-color: #394959;
-  font-size: 0.9375rem;
-  text-transform: uppercase;
+  font-size: 12px;
 
   &:disabled {
     background: none !important;
